Preserve file encoding when editing text files